2011-10-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cve-details): Add "none" case for References and
	Vulnerable Products.  Format Vulnerable Products like other tables.

2011-10-25  Matthew Mundell <matthew.mundell@greenbone.net>

	Bring the SecInfo pages closer to the others.

	* src/html/dialog.xsl (browse_infosec.html): Remove main heading.  Use H1
	for headings.

	* src/html/omp.xsl (cve-details, cpe-details): Remove main heading.  Use
	H1 for headings.  Add "Back to" link.

2011-10-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cve-details): Use H1 for both NVT list cases.

2011-10-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_info_response): Make heading depend on type.

2011-10-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (host): Link threat count to CPE Details page.

2011-10-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cpe-details): Add list of reported vulnerabilites.

2011-10-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cve-details): Bold only the ID field, as in other
	pages.

2011-10-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cve-details): Add table of NVTs that address the CVE.

2011-10-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/dialog.xsl (browse_infosec.html): Make the text inputs wider
	so that an entire NVT OID fits in the field.

2011-10-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_info_response): Switch to new wrapper tags.
	(cve-details, cpe-details): Add wrapper tags.

2011-10-21  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/help.xsl: Correct help message for port range.

2011-10-19  Matthew Mundell <matthew.mundell@greenbone.net>

	Get Credential saving working.

	* src/gsad_omp.c (save_lsc_credential_omp): Get change_login from the